# pycon-workshop-data-analytics

./: .gitignore  .pre-commit-config.yaml  LICENSE  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: api.md  index.md
src/data_analytics_mcuig/: __init__.py  column_statistics.py
tests/: test_column_statistics.py
